[tool.poetry]
name = "py-web-hw-5"
version = "0.1.0"
description = ""
authors = ["Ihor Siedielnikov <sisemail92@gmail.com>"]
readme = "README.md"
packages = [{include = "py_web_hw_5"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
